# bank_transactions_analyzer

./: .env  .env.template  .flake8  .gitignore  README.md  conftest.py  pyproject.toml  user_settings.json
reports/: report_20260401_071908.json  report_20260401_130214.json
src/: aggregator.py  main.py  parsers.py  reports.py  services.py  utils.py  views.py
tests/: test_aggregator.py  test_parsers.py  test_reports.py  test_services.py  test_utils.py
